<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".ui.login.LoginActivity">

    <TextView
        android:id="@+id/signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/metropolis_bold"
        android:layout_marginTop="60dp"
        android:text="@string/login"
        android:layout_marginStart="@dimen/activityPadding"
        android:textSize="34sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etUsername"
        style="@style/Widget.Material3.TextInputLayout.FilledBox"
        android:layout_width="0dp"
        android:layout_height="64dp"
        android:layout_marginTop="73dp"
        android:elevation="3dp"
        app:boxBackgroundColor="@color/white"
        android:backgroundTint="@color/white"
        android:layout_marginHorizontal="@dimen/activityPadding"
        app:boxStrokeWidth="0dp"
        app:hintEnabled="true"
        app:layout_goneMarginTop="4dp"
        app:boxCornerRadiusBottomEnd="5dp"
        app:boxCornerRadiusBottomStart="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/bg_edittext"
        app:layout_constraintStart_toStartOf="parent"
        app:boxStrokeWidthFocused="0dp"
        app:layout_constraintTop_toBottomOf="@+id/signup">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:layout_margin="0dp"
            android:fontFamily="@font/metropolis_medium"
            android:hint="@string/username"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etPassword"
        style="@style/Widget.Material3.TextInputLayout.FilledBox"
        android:layout_width="0dp"
        android:layout_height="64dp"
        android:layout_marginTop="8dp"
        android:layout_marginHorizontal="@dimen/activityPadding"
        android:background="@drawable/bg_edittext"
        android:backgroundTint="@color/white"
        android:elevation="3dp"
        app:boxBackgroundColor="@color/white"
        app:boxCornerRadiusBottomEnd="5dp"
        app:boxCornerRadiusBottomStart="5dp"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:hintEnabled="true"
        app:passwordToggleEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etUsername"
        app:layout_goneMarginTop="4dp"
        app:passwordToggleTint="?colorAccent">

    <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:layout_margin="0dp"
            android:fontFamily="@font/metropolis_medium"
            android:hint="@string/password"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/forgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/metropolis_medium"
        android:text="@string/forgot_your_password"
        android:textSize="14sp"
        android:layout_marginEnd="3dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toStartOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/imageView" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="@dimen/icon"
        android:layout_height="@dimen/icon"
        android:layout_marginTop="14dp"
        android:src="@drawable/round_arrow_right"
        app:layout_constraintEnd_toEndOf="@+id/etPassword"
        app:layout_constraintTop_toBottomOf="@+id/etPassword" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="0dp"
        android:layout_height="@dimen/button"
        android:layout_marginTop="32dp"
        android:text="LOGIN"
        android:fontFamily="@font/metropolis_medium"
        android:textSize="14sp"
        android:backgroundTint="@color/primary"
        android:layout_marginHorizontal="@dimen/activityPadding"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />
</androidx.constraintlayout.widget.ConstraintLayout>